# SQL_Autocorrect

./: .coveragerc  .gitignore  README.md  pyproject.toml  setup.py  tests.py
.github/workflows/: pythonapp.yml
sql_autocorrect/: cli.py  statut.py
sql_autocorrect/cli/: grader.py  parser.py  reader.py
sql_autocorrect/models/: __init__.py  statut.py
tests/bases/: choco.db
tests/requetes/: alias_agregat_mix_manque.sql  alias_agregat_mix_ok.sql  alias_agregat_mix_semi_manque.sql  alias_agregat_simple_manque.sql  alias_agregat_simple_ok.sql  alias_table_err_alias.sql  alias_table_err_table.sql  alias_table_ok.sql  alias_table_seule_ok.sql  from_exces.sql  from_manque.sql  from_ok.sql  from_solution.sql  groupby_mix_agregat_having_sans_groupby.sql  groupby_mix_agregat_select_sans_groupby.sql  groupby_mix_exces.sql  groupby_mix_groupby_inutile.sql  groupby_mix_manque.sql  groupby_mix_ok1.sql  groupby_mix_ok2.sql  groupby_mix_semi_manque.sql  groupby_mix_solution.sql  groupby_seul_absent.sql  groupby_seul_exces.sql  groupby_seul_manque.sql  groupby_seul_ok.sql  groupby_seul_semi_manque.sql  groupby_seul_solution.sql  groupby_simple_inutile.sql  groupby_simple_solution.sql  having_exces.sql  having_inutile.sql  having_manquant.sql  having_manque1.sql  having_ok.sql  having_sans_gb.sql  having_solution2.sql  orderby_desordre.sql  orderby_err_mixte.sql  orderby_manque.sql  (+27 more)
tests/resultats/: resultat1.sqlac  resultat2.sqlac  resultat_diff.sqlac  resultat_max_lignes.sqlac  resultat_ok.sqlac  resultat_parse_exception.sqlac
